overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -119,50 +119,25 @@
   }
 
   .slider-wrap {
-    animation: scroll 10s ease-in-out infinite;
-    width: calc(250px * 8);
+    animation: scroll 15s ease-in-out infinite;
+    width: calc(400px * 14);
+    overflow: hidden;
   }
 
   @keyframes scroll {
     0% {
-      transform: translateX(0);
+      transform: translateX(-200px);
     }
     60% {
-      transform: translateX(calc(-50px * 5));
+      transform: translateX(calc(-50px * 30));
     }
     100% {
-      transform: translateX(0);
+      transform: translateX(-200px);
     }
   }
   .dark-slider-wrap {
-    animation: scroll 10s ease-in-out infinite;
-    width: calc(250px * 8);
-  }
-
-  .glowing-container {
-    position: relative;
-  }
-
-  .glowing-inner {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    filter: brightness(150%) blur(10px);
-    animation: move-glow 4s ease-in-out infinite;
-  }
-
-  @keyframes move-glow {
-    0% {
-      transform: translateX(0);
-    }
-    50% {
-      transform: translateX(100%);
-    }
-    100% {
-      transform: translateX(0);
-    }
+    animation: scroll 15s ease-in-out infinite;
+    width: calc(400px * 14);
+    overflow: hidden;
   }
 } ;
